<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">id34</string>
    <string name="search_hint">Search ideas</string>
    <string name="idea_hint">Type a new idea…</string>
    <string name="add_label">Add</string>
    <string name="drawer_title">Filtered ideas</string>
    <string name="backups_label">Backups</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="backup_retention">Retention (1-99)</string>
    <string name="backup_now">Backup now</string>
    <string name="purge_old">Purge old backups</string>
    <string name="settings_label">Settings</string>
</resources>
